--- a/main.html
+++ b/main.html
@@ -3,11 +3,41 @@
 <html>
 
 <head>
+	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <div class="container my-4">
+    <h1 class="mb-4">Bootstrap Buttons Assignment</h1>
+    
+    <!-- Button 1: Primary button -->
+    <button id="button-1" class="btn btn-primary">Primary Button</button>
+
+    <!-- Button 2: Outline secondary button -->
+    <button id="button-2" class="btn btn-outline-secondary">Outline Secondary Button</button>
+
+    <!-- Button 3: Success large button -->
+    <button id="button-3" class="btn btn-success btn-lg">Success Large Button</button>
+
+    <!-- Button 4: Danger small button -->
+    <button id="button-4" class="btn btn-danger btn-sm">Danger Small Button</button>
+
+    <!-- Button 5: Warning large full-screen width button -->
+    <button id="button-5" class="btn btn-warning btn-lg w-100">Warning Full-Width Button</button>
+
+    <!-- Button 6: Disabled info button -->
+    <button id="button-6" class="btn btn-info" disabled>Disabled Info Button</button>
+
+    <!-- Button 7: Light button -->
+    <button id="button-7" class="btn btn-light">Light Button</button>
+
+    <!-- Button 8: Link button -->
+    <a id="button-8" class="btn btn-link" href="#">Link Button</a>
+  </div>
+
+	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
